# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pici.yml
gendiff/: __init__.py  diff.py  engine.py  parsing.py
gendiff/formaters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_all.py  test_diff.py  test_easy_file.py  test_json.py  test_nested.py  test_other.py  test_plain.py
tests/fixtures/: result_copy.txt  result_empty.txt  result_json.txt
