[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "My second project <gendiff>"
authors = ["slavanr45 <slava.r45@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"},]
repository = "https://github.com/slavanr45/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
